TSPS-198 Add Beagle WDL to TSPS (#85)